--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   },
   "homepage": "https://github.com/turnerlabs/customs-api#readme",
   "dependencies": {
+    "body-parser": "1.15.2",
     "cors": "2.7.1",
     "debug": "2.2.0",
     "express": "4.14.0",
-    "morgan": "1.7.0",
-    "request": "2.74.0"
+    "morgan": "1.7.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
