fix(circle): deploy on develop and master
Signed-off-by: Josh Kurz <josh.kurz@turner.com>

--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ dependencies:
     
 deployment:
   staging:
-    branch: [develop, quay]
+    branch: [master, develop]
     commands:
       - source buildprops; docker run quay.io/turner/harbor-deploy deploy ops-$HARBOR_CONTAINER \ 
                                                                    quay.io/turner $HARBOR_CONTAINER \
