--- a/circle.yml
+++ b/circle.yml
@@ -21,7 +21,7 @@ dependencies:
     - source buildprops; docker build -t quay.io/turner/$HARBOR_CONTAINER:$HARBOR_VERSION .
     - source buildprops; docker push quay.io/turner/$HARBOR_CONTAINER:$HARBOR_VERSION
     - source buildprops; docker run quay.io/turner/harbor-deploy deploy \
-      -s mss-$HARBOR_CONTAINER \
+      -s ops-$HARBOR_CONTAINER \
       -r quay.io/turner \
       -c $HARBOR_CONTAINER \
       -v $HARBOR_VERSION \
