--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "chai": "3.5.0",
     "mocha": "3.0.2",
+    "mocha-junit-reporter": "1.12.1",
     "nock": "8.0.0",
     "supertest": "2.0.0"
   }
