--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ machine:
 
 test:
   override:
-    - mocha test --reporter mocha-junit-reporter:
+    - npm run junit:
         environment:
           MOCHA_FILE: "${CIRCLE_TEST_REPORTS}/junit/test-results.xml"
 
