--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "node ./node_modules/mocha/bin/mocha",
+    "junit": "node ./node_modules/mocha/bin/mocha --reporter mocha-junit-reporter",
     "start": "node app.js"
   },
   "repository": {
