--- a/circle.yml
+++ b/circle.yml
@@ -5,13 +5,7 @@ machine:
     - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
   services:
     - docker
-
-test:
-  override:
-    - npm run junit:
-        environment:
-          MOCHA_FILE: "${CIRCLE_TEST_REPORTS}/junit/test-results.xml"
-
+  
 dependencies:
   pre:
     - npm install
@@ -19,26 +13,27 @@ dependencies:
   override:
     - docker version
     - docker info
-    - docker login -e="${DOCKER_EMAIL}" -u="${DOCKER_USER}" -p="${DOCKER_PASSWORD}" quay.io
-    - docker run -v $(pwd):/data quay.io/turner/harbor-deploy set_build_values \
+    - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USER" -p="$DOCKER_PASSWORD" quay.io
+    - docker run -v `pwd`:/data quay.io/turner/harbor-deploy:0.2.0-add-catalog-function.15 set_build_values \
       -d /data \
-      -b "${CIRCLE_BRANCH}" \
-      -n "${CIRCLE_BUILD_NUM}" > buildprops;
-    - source buildprops; docker build -t "quay.io/turner/${HARBOR_CONTAINER}:${HARBOR_VERSION}" .
-    - source buildprops; docker push "quay.io/turner/${HARBOR_CONTAINER}:${HARBOR_VERSION}"
-    - source buildprops; docker run quay.io/turner/harbor-deploy deploy \
-      -s "ops-${HARBOR_CONTAINER}" \
-      -r quay.io/turner \
-      -c "${HARBOR_CONTAINER}" \
-      -v "${HARBOR_VERSION}" \
+      -b $CIRCLE_BRANCH \
+      -n $CIRCLE_BUILD_NUM > props;
+    - source props; docker build -t $IMAGE .
+    - source props; docker push $IMAGE
+    - source props; docker --env-file props run quay.io/turner/harbor-deploy catalog \
+      -s ops-$HARBOR_CONTAINER \
       -e dev \
-      -p ec2 \
-      -t "${SHIPMENT_BUILD_TOKEN}" \
-      -a https://customs.services.dmtio.net
-
+      -t $SHIPMENT_BUILD_TOKEN
+      
 deployment:
   staging:
+    branch: [develop]
+    commands:
+      - source props; docker --env-file props run quay.io/turner/harbor-deploy deploy \
+        -s ops-$HARBOR_CONTAINER \
+        -e dev \
+        -t $SHIPMENT_BUILD_TOKEN
     branch: [master]
     commands:
-      - source buildprops; docker tag "quay.io/turner/${HARBOR_CONTAINER}:${HARBOR_VERSION}" "quay.io/turner/${HARBOR_CONTAINER}:latest"
-      - source buildprops; docker push "quay.io/turner/${HARBOR_CONTAINER}:latest"
+      - source props; docker tag $IMAGE quay.io/turner/$HARBOR_CONTAINER:latest
+      - source props; docker push quay.io/turner/$HARBOR_CONTAINER:latest
