--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
     - docker version
     - docker info
     - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USER" -p="$DOCKER_PASSWORD" quay.io
-    - docker run -v `pwd`:/data quay.io/turner/harbor-deploy:0.2.0-add-catalog-function.15 set_build_values \
+    - docker run -v `pwd`:/data quay.io/turner/harbor-deploy:0.2.0-add-catalog-function.16 set_build_values \
       -d /data \
       -b $CIRCLE_BRANCH \
       -n $CIRCLE_BUILD_NUM > props;
@@ -35,5 +35,5 @@ deployment:
         -t $SHIPMENT_BUILD_TOKEN
     branch: [master]
     commands:
-      - source props; docker tag $IMAGE quay.io/turner/$HARBOR_CONTAINER:latest
-      - source props; docker push quay.io/turner/$HARBOR_CONTAINER:latest
+      - source props; docker tag $IMAGE $LATEST
+      - source props; docker push $LATEST
