--- a/circle.yml
+++ b/circle.yml
@@ -24,7 +24,7 @@ dependencies:
       -b "${CIRCLE_BRANCH}" \
       -n "${CIRCLE_BUILD_NUM}" > props;
     - echo "SHIPMENT=ops-customs-api" >> props
-    - echo "ENVIRONMENT=dev" >> props"
+    - echo "ENVIRONMENT=dev" >> props
     - echo "TOKEN=$SHIPMENT_BUILD_TOKEN" >> props
     - source props; docker build -t "${IMAGE}" .
     - source props; docker push "${IMAGE}"
