--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,7 @@ dependencies:
     - docker version
     - docker info
     - docker login -e="${DOCKER_EMAIL}" -u="${DOCKER_USER}" -p="${DOCKER_PASSWORD}" quay.io
-    - docker run -v $(pwd):/data quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 set_build_values \
+    - docker run -it -v $(pwd):/data quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 set_build_values \
       -s "ops-customs-api" \
       -t "${SHIPMENT_BUILD_TOKEN}" \
       -e "dev" \
@@ -28,13 +28,13 @@ dependencies:
       -n "${CIRCLE_BUILD_NUM}" > props;
     - source props; docker build -t "${IMAGE}" .
     - source props; docker push "${IMAGE}"
-    - source props; docker run --env-file props quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 catalog
+    - source props; docker run -it --env-file props quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 catalog
       
 deployment:
   staging:
     branch: [develop]
     commands:
-      - source props; docker run --env-file props quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 deploy
+      - source props; docker run -it --env-file props quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 deploy
     branch: [master]
     commands:
       - source props; docker tag "${IMAGE}" "${LATEST}"
