--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,7 @@ dependencies:
     - docker version
     - docker info
     - docker login -e="${DOCKER_EMAIL}" -u="${DOCKER_USER}" -p="${DOCKER_PASSWORD}" quay.io
-    - docker run -it -v $(pwd):/data quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 set_build_values \
+    - docker run -v $(pwd):/data quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 set_build_values \
       -s "ops-customs-api" \
       -t "${SHIPMENT_BUILD_TOKEN}" \
       -e "dev" \
