fix(circle): deploy on master merge
Signed-off-by: Josh Kurz <josh.kurz@turner.com>

--- a/circle.yml
+++ b/circle.yml
@@ -37,5 +37,6 @@ deployment:
       - source props; docker run -it --env-file props quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 deploy
     branch: [master]
     commands:
+      - source props; docker run -it --env-file props quay.io/turner/harbor-deploy:0.2.0-add-more-options.37 deploy
       - source props; docker tag "${IMAGE}" "${LATEST}"
       - source props; docker push "${LATEST}"
