--- a/circle.yml
+++ b/circle.yml
@@ -24,16 +24,16 @@ dependencies:
       -d /data \
       -b "${CIRCLE_BRANCH}" \
       -n "${CIRCLE_BUILD_NUM}" > buildprops;
-    - source buildprops; docker build -t "quay.io/turner/${HARBOR_CONTAINER}:${HARBOR_VERSION}" .
-    - source buildprops; docker push "quay.io/turner/${HARBOR_CONTAINER}:${HARBOR_VERSION}"
+    - source buildprops; docker build -t "quay.io/turner/${CONTAINER}:${VERSION}" .
+    - source buildprops; docker push "quay.io/turner/${CONTAINER}:${VERSION}"
     - source buildprops; docker run quay.io/turner/harbor-deploy deploy \
-      -s "ops-${HARBOR_CONTAINER}" \
+      -s "ops-${CONTAINER}" \
       -r quay.io/turner \
-      -c "${HARBOR_CONTAINER}" \
-      -v "${HARBOR_VERSION}" \
+      -c "${CONTAINER}" \
+      -v "${VERSION}" \
       -e dev \
       -p ec2 \
-      -t "${SHIPMENT_BUILD_TOKEN}" \
+      -t "${TOKEN}" \
       -a https://customs.services.dmtio.net
 
 deployment:
